--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: resturant_app
+name: etechapp
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
