--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.etechapp">
+    <uses-permission
+        android:name="android.permission.LOCATION_HARDWARE" />
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -9,6 +11,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="etechapp"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBB3r_lLJNLGxpsrSQnbBwo3khwBLDO7Oo"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -26,5 +31,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
     </application>
 </manifest>
