--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   image_picker: ^0.5.3+1
   firebase_storage: ^3.1.5
   transparent_image: ^0.1.0
+  google_maps_flutter: ^0.4.0
+  permission: ^0.1.7
+  fluttertoast: ^5.0.1
+
 
 
 dev_dependencies:
