--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_maps_flutter: ^0.4.0
   permission: ^0.1.7
   fluttertoast: ^5.0.1
+  contactus:
+    git:
+      url: https://github.com/Paradox2405/contactus.git
 
 
 
