--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   contactus:
     git:
       url: https://github.com/Paradox2405/contactus.git
+  social_share: ^2.0.5
+  screenshot: ^0.2.0
+
 
 
 
