--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
       url: https://github.com/Paradox2405/contactus.git
   social_share: ^2.0.5
   screenshot: ^0.2.0
+  http_auth: ^0.2.9
+  webview_flutter: ^0.3.22+1
+  shared_preferences: ^0.5.7+3
+
+
 
 
 
